Update demo website using SPACE DATA ^^

--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -34,9 +34,8 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="header-title">Select 2</h4>
-                {{ form_row(form.fish) }}
-                {{ form_row(form.fishEntities) }}
-                {{ form_row(form.asyncFishEntities) }}
+                {{ form_row(form.missions) }}
+                {{ form_row(form.asyncMissions) }}
                 {{ form_row(form.tags) }}
             </div>
         </div>
