Demo with Row Modifier + fix api pagination

--- a/templates/admin/datatable/custom_adapter.html.twig
+++ b/templates/admin/datatable/custom_adapter.html.twig
@@ -5,7 +5,7 @@
         <h4 class="card-title">Custom adapter</h4>
         <p class="text-muted font-14">
             Async loading. Data are paginate by server using a <code>CustomAdapter</code>.<br>
-            Adapter loading data from <a href="https://github.com/r-spacex/SpaceX-API" class="text-primary">SpaceX API</a> and use /query paginate options of Api.
+            Adapter loading data from <a href="https://github.com/r-spacex/SpaceX-API" class="text-primary">SpaceX API</a> and use paginate options of Api.
         </p>
 
         {{ render_table(table) }}
