Use WebComponents / Remove UmbrellaApp

--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -6,7 +6,7 @@
             <h4>Send a notification</h4>
         </div>
         <div class="card-body">
-            <form enctype="multipart/form-data" method="POST" data-mount="Form">
+            <form enctype="multipart/form-data" method="POST">
                 {{ form_errors(form) }}
                 {{ form_rest(form) }}
 
