Upgrade Demo - add tree move down / up + add multiple / modal datatable example

--- a/templates/admin/datatable/_modal.html.twig
+++ b/templates/admin/datatable/_modal.html.twig
@@ -3,7 +3,7 @@
 {% block modal_class %}modal-xl{% endblock %}
 
 {% block modal_title %}
-    <h4 class="modal-title">{{ classification.parent }} / {{ classification }} </h4>
+    <h4 class="modal-title">Missions by <u>{{ status }}</u></h4>
 {% endblock %}
 
 {% block modal_content %}
