--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -43,7 +43,7 @@
             </div>
 
             <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2"> Fichier</h5>
+                <h5 class="m-0 pb-2"> File</h5>
                 <div class="card card-body mb-0">
                     {{ form_row(form.file) }}
                     {{ form_row(form.pdf) }}
