--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -1,6 +1,7 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
+    {{ umbrella_form_theme(form) }}
     <div class="card">
         <div class="card-header">
             <h4>Send a notification</h4>
