--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -1,6 +1,7 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
+    {{ umbrella_form_theme(form) }}
     <form enctype="multipart/form-data" method="POST">
 
         <div class="d-flex">
