--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -35,13 +35,13 @@
 
                             <div class="d-flex justify-content-center">
                                 <span class="mr-2">
-                                    Code are available on <a href="https://github.com/acantepie/umbrella-demo" class="text-primary">my github</a>.
+                                   Code of demo app is available on <a href="https://github.com/acantepie/umbrella-admin-demo" class="text-primary">my github</a>.
                                 </span>
                                 <span class="mr-2">
                                     <a class="github-button" href="https://github.com/acantepie" aria-label="Follow @acantepie on GitHub">Follow @acantepie</a>
                                 </span>
                                 <span>
-                                    <a class="github-button" href="https://github.com/acantepie/umbrella-demo" data-icon="octicon-star" aria-label="Star acantepie/umbrella-demo on GitHub">Star</a>
+                                    <a class="github-button" href="https://github.com/acantepie/umbrella" data-icon="octicon-star" aria-label="Star acantepie/umbrella on GitHub">Star</a>
                                 </span>
                             </div>
 
@@ -58,9 +58,9 @@
                                     <i class="mdi mdi-layers-outline text-primary font-24"></i>
                                 </span>
                             </div>
-                            <h4 class="mt-3">Based on Admin theme Hyper</h4>
+                            <h4 class="mt-3">Beautiful Admin theme</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Use sass and boostrap 4, packaged with webpack - More info <a href="https://themes.getbootstrap.com/product/hyper-responsive-admin-dashboard-template/" class="text-primary">here</a>.
+                                Use admin bootstrap4 sass theme packaged with webpack</a>.
                             </p>
                         </div>
                     </div>
