--- a/templates/admin/datatable/multiple.html.twig
+++ b/templates/admin/datatable/multiple.html.twig
@@ -5,13 +5,13 @@
         Try edit space mission ( <i class="mdi mdi-pencil"></i> icon ) and change his <b>mission status</b>.
     </div>
     {% for mission_status, table in tables %}
-            <div class="card">
-                <a href class="card-header" data-toggle="collapse" data-target="#card-{{ table.id }}">
-                    <h4><i class="mdi mdi-chevron-right"></i> Space missions filtered by <span class="text-primary">{{ mission_status }}</span></h4>
-                </a>
-                <div id="card-{{ table.id }}" class="card-body collapse">
-                    {{ render_table(table) }}
-                </div>
+        <div class="card">
+            <a href="#card-{{ table.id }}" class="card-header text-reset" data-bs-toggle="collapse">
+                <h4><i class="mdi mdi-chevron-right"></i> Space missions filtered by <span class="text-primary">{{ mission_status }}</span></h4>
+            </a>
+            <div id="card-{{ table.id }}" class="card-body collapse">
+                {{ render_table(table) }}
             </div>
+        </div>
     {% endfor %}
 {% endblock %}
