--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -11,8 +11,8 @@
                 Then, server return an Json response respecting the good format.
             </p>
 
-            <a href="#response-format" data-toggle="collapse" class="text-primary">
-                <i class="mdi mdi-eye mr-1"></i> See response format
+            <a href="#response-format" data-bs-toggle="collapse" class="text-primary">
+                <i class="mdi mdi-eye me-1"></i> See response format
             </a>
             <pre class="border-dark border p-2 collapse" id="response-format">{{ source('admin/js/_js_response.txt') | e('html') }}</pre>
             <br>
@@ -46,7 +46,7 @@
 
                     <div class="mb-2">
                         {% for action, label in actions %}
-                            <a href data-xhr="{{ path('app_admin_js_xhr', {'action' : action}) }}" class="btn btn-primary mr-2">
+                            <a href data-xhr="{{ path('app_admin_js_xhr', {'action' : action}) }}" class="btn btn-primary me-2">
                                 {{ label }}
                             </a>
                         {% endfor %}
@@ -69,7 +69,7 @@
                     <pre class="border-dark border p-2">{{ '<a data-xhr="..." data-spinner="true" href>My link</a>' | e }}</pre>
 
                     <div class="mb-2">
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr') }}" data-spinner="true" class="btn btn-primary mr-2">
+                        <a href data-xhr="{{ path('app_admin_js_sleepxhr') }}" data-spinner="true" class="btn btn-primary me-2">
                             Click-me
                         </a>
                     </div>
@@ -89,7 +89,7 @@
                     <pre class="border-dark border p-2">{{ '<a data-xhr="..." data-confirm="Are you sure ?" href>My link</a>' | e }}</pre>
 
                     <div class="mb-2">
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 0}) }}" data-confirm="Are you sure ?" class="btn btn-primary mr-2">
+                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 0}) }}" data-confirm="Are you sure ?" class="btn btn-primary me-2">
                             Click-me
                         </a>
                     </div>
@@ -101,7 +101,7 @@
             <div class="card">
                 <div class="card-header d-flex align-items-center">
                     <h4><span class="text-primary">data-xhr-id</span> attribute</h4>
-                    <span class="badge badge-danger ml-auto">New</span>
+                    <span class="badge bg-danger ms-auto">New</span>
                 </div>
                 <div class="card-body">
                     <p>
@@ -110,10 +110,10 @@
                     <pre class="border-dark border p-2">{{ '<a data-xhr="..." data-xhr-id="my-id" href>My link</a>' | e }}</pre>
 
                     <div class="mb-2">
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 2}) }}" data-xhr-id="my-id" class="btn btn-primary mr-2">
+                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 2}) }}" data-xhr-id="my-id" class="btn btn-primary me-2">
                             Click-me
                         </a>
-                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 2}) }}" data-xhr-id="my-id" class="btn btn-primary mr-2">
+                        <a href data-xhr="{{ path('app_admin_js_sleepxhr', {sleep: 2}) }}" data-xhr-id="my-id" class="btn btn-primary me-2">
                             Or me
                         </a>
                     </div>
