--- a/templates/admin/tabs/index.html.twig
+++ b/templates/admin/tabs/index.html.twig
@@ -162,14 +162,14 @@
                     {{ nav_config('pills_justified', {
                         'active_strategy': 'current_route',
                         'nav_item' : {
-                            'icon' : 'mdi mdi-check mr-1',
+                            'icon' : 'mdi mdi-check me-1',
                             'attr_link' : {
                                 'class' : 'nav-link font-italic'
                             }
                         }
                     }) }}
                     {{ nav_start() }}
-                    {{ nav_item({'label' : 'Home', 'url': '#home', 'icon': 'mdi mdi-home mr-1', 'attr_link':  {'class': 'nav-link font-weight-bold'}}) }}
+                    {{ nav_item({'label' : 'Home', 'url': '#home', 'icon': 'mdi mdi-home me-1', 'attr_link':  {'class': 'nav-link font-weight-bold'}}) }}
                     {{ nav_item({'label': 'Tabs', 'route': 'app_admin_tabs_index'}) }}
                     {{ nav_item({'label' : 'Profile', 'url': '#profile'}) }}
                     {{ nav_end() }}
@@ -179,14 +179,14 @@
 {{ nav_config('pills_justified', {
     'active_strategy': 'current_route',
     'nav_item' : {
-        'icon' : 'mdi mdi-check mr-1',
+        'icon' : 'mdi mdi-check me-1',
         'attr_link' : {
             'class' : 'nav-link font-italic'
         }
     }
 }) }}
 {{ nav_start() }}
-{{ nav_item({'label' : 'Home', 'url': '#home', 'icon': 'mdi mdi-home mr-1', 'attr_link':  {'class': 'nav-link font-weight-bold'}}) }}
+{{ nav_item({'label' : 'Home', 'url': '#home', 'icon': 'mdi mdi-home me-1', 'attr_link':  {'class': 'nav-link font-weight-bold'}}) }}
 {{ nav_item({'label': 'Tabs', 'route': 'app_admin_tabs_index'}) }}
 {{ nav_item({'label' : 'Profile', 'url': '#profile'}) }}
 {{ nav_end() }}
