--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -22,7 +22,7 @@
                         <div class="text-center">
 
                             <h1 class="mt-0">
-                                <i class="mdi mdi-umbrella mr-1"></i> <span class="text-primary">Umbrella</span> Framework
+                                <i class="mdi mdi-umbrella me-1"></i> <span class="text-primary">Umbrella</span> Framework
                             </h1>
 
                             <h3>
@@ -30,14 +30,14 @@
                             </h3>
 
                             <a href="{{ path('app_admin_default_index') }}" class="btn btn-lg btn-primary my-4">
-                                Try yourself <i class="mdi mdi-arrow-right ml-1"></i>
+                                Try yourself <i class="mdi mdi-arrow-right ms-1"></i>
                             </a>
 
                             <div class="d-flex justify-content-center">
-                                <span class="mr-2">
+                                <span class="me-2">
                                    Code of demo app is available on <a href="https://github.com/acantepie/umbrella-admin-demo" class="text-primary">my github</a>.
                                 </span>
-                                <span class="mr-2">
+                                <span class="me-2">
                                     <a class="github-button" href="https://github.com/acantepie" aria-label="Follow @acantepie on GitHub">Follow @acantepie</a>
                                 </span>
                                 <span>
