--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -59,7 +59,7 @@
 
             <ul>
                 <li class="pb-2">
-                    <strong>Sidebar</strong> : Reuse Menu component with javascript library <a href="https://github.com/onokumus/metismenu" class="text-primary">metismenu</a>.
+                    <strong>Sidebar</strong> : Reuse Menu component</a>.
                 </li>
                 <li class="pb-2">
                     <strong>User Management</strong> : Inspired by <a href="https://github.com/FriendsOfSymfony/FOSUserBundle" class="text-primary">FOSUserBundle</a>, it works the same way but use new Symfony 5.2 authenticator.
