--- a/templates/admin/datatable/draggable.html.twig
+++ b/templates/admin/datatable/draggable.html.twig
@@ -5,7 +5,7 @@
         <h4 class="card-title">Draggable example</h4>
         <p class="text-muted font-14">
             Example of Datatable with <a href="https://datatables.net/extensions/rowreorder/" class="text-primary">RowReorder</a> extension.<br>
-            After each row reordering, an ajax query was performed, server save changes and refresh view (i.e. call <code>Datatable.draw()</code>).
+            After each row reordering, an ajax query was performed and server save changes.
         </p>
 
         {{ render_table(table) }}
