--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -4,9 +4,8 @@
     {{ umbrella_form_theme(form) }}
     <form enctype="multipart/form-data" method="POST">
 
-        <div class="d-flex">
-            <span class="ms-auto"></span>
-            <button type="submit" class="btn btn-primary">
+        <div class="d-flex mb-3">
+            <button type="submit" class="btn btn-primary ms-auto">
                 <i class="mdi mdi-check"></i> {{ 'action.save' | trans }}
             </button>
         </div>
@@ -15,37 +14,33 @@
 
         <div class="row">
 
-            <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2">Basic</h5>
-                <div class="card card-body mb-0">
+            <div class="col-md-6">
+                <div class="card card-body">
+                    <h4 class="header-title">Basic</h4>
                     {{ form_row(form.active) }}
                     {{ form_row(form.amount) }}
                     {{ form_row(form.color) }}
                     {{ form_row(form.text) }}
                     {{ form_row(form.url) }}
                 </div>
-            </div>
 
-            <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2">Select 2</h5>
-                <div class="card card-body mb-0">
+                <div class="card card-body">
+                    <h4 class="header-title">Select 2</h4>
                     {{ form_row(form.missions) }}
                     {{ form_row(form.asyncMissions) }}
                     {{ form_row(form.tags) }}
                 </div>
-            </div>
 
-            <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2">Date</h5>
-                <div class="card card-body mb-0">
+                <div class="card card-body">
+                    <h4 class="header-title">Date</h4>
                     {{ form_row(form.date) }}
                     {{ form_row(form.dateTime) }}
                 </div>
             </div>
 
-            <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2"> File</h5>
-                <div class="card card-body mb-0">
+            <div class="col-md-6">
+                <div class="card card-body">
+                    <h4 class="header-title">File</h4>
                     {{ form_row(form.image) }}
                     {% if form.image.vars.value %}
                         <div class="alert alert-info d-flex align-items-center">
@@ -57,20 +52,15 @@
                     {% endif %}
                     {{ form_row(form.pdf) }}
                 </div>
-            </div>
 
-            <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2"> Ckeditor</h5>
-                <div class="card card-body mb-0">
+                <div class="card card-body">
+                    <h4 class="header-title">Ckeditor</h4>
                     {{ form_widget(form.htmlText) }}
                 </div>
-            </div>
 
-            <div class="mb-4 col-md-6">
-                <h5 class="m-0 pb-2"> Collection</h5>
-                <div class="card card-body mb-0">
-                    {{ form_widget(form.items) }}
-                    <div class="mb-4"></div>
+                <div class="card card-body">
+                    <h4 class="header-title">Collection</h4>
+                    {{ form_widget(form.items, {attr: {class: 'mb-4'}}) }}
                     {{ form_widget(form.strings) }}
                 </div>
             </div>
