--- a/templates/admin/tabs/index.html.twig
+++ b/templates/admin/tabs/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row">
 
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
                     <h5>Config : default</h5>
@@ -115,7 +115,7 @@
             </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
                     <h5>Config : bordered</h5>
