--- a/templates/admin/form/index.html.twig
+++ b/templates/admin/form/index.html.twig
@@ -14,7 +14,7 @@
 
         <div class="row">
 
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="card card-body">
                     <h4 class="header-title">Basic</h4>
                     {{ form_row(form.active) }}
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="card card-body">
                     <h4 class="header-title">File</h4>
                     {{ form_row(form.image) }}
