--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h4>About framwork</h4>
+            <h4>About framework</h4>
         </div>
         <div class="card-body">
             <p>
