--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -6,7 +6,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 
         <title>Framework Umbrella | Admin framework based on symfony 5</title>
-        <meta content="Intuitive framework to create a beautiful backends for your application." name="description" />
+        <meta content="Intuitive framwork to create a beautiful backends for your application." name="description" />
         <meta content="Adrien Cantepie" name="author" />
 
         {{ encore_entry_link_tags('front') }}
@@ -74,7 +74,7 @@
                             </div>
                             <h4 class="mt-3">Symfony 5 / php 7.4</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Developed with Symfony framework.
+                                Developed with Symfony framwork.
                             </p>
                         </div>
                     </div>
